# hoststamp

./: .dockerignore  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  config.example.toml  mise.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  publish-nightly.yml  release.yml
crates/hoststamp/: Cargo.toml  build.rs
crates/hoststamp-api/: Cargo.toml
crates/hoststamp-api/src/: lib.rs
crates/hoststamp-api/tests/: http.rs
crates/hoststamp-core/: Cargo.toml  build.rs
crates/hoststamp-core/data/: artifact.json
crates/hoststamp-core/src/: auth.rs  config.rs  credits.rs  dictionary.rs  generator.rs  lib.rs  notices.rs  profile.rs  storage.rs
crates/hoststamp-ux/: Cargo.toml
crates/hoststamp-ux/src/: lib.rs
crates/hoststamp-ux/static/: app.css  app.js  dev-reload.js  index.html  profile-health.js
crates/hoststamp-ux/tests/: app.test.js  profile-health.test.js
crates/hoststamp/data/: artifact.json  blocked-server-words.txt
crates/hoststamp/src/: auth.rs  config.rs  credits.rs  dictionary.rs  generator.rs  lib.rs  main.rs  notices.rs  profile.rs  server.rs  storage.rs  wordlists.rs
crates/hoststamp/tests/: cli.rs  http.rs
docs/: api.md  configuration.md  deployment.md  development.md  dictionaries.md  generation.md  integrations.md  release.md
docs/examples/github-actions/: validate-hostnames.yml
scripts/: dev-env.sh  docker-smoke.sh  package-native-asset.sh  release-prep.sh  release-publish.sh  release-tag.sh
