# SPDX-License-Identifier: FSL-1.1-ALv2

[workspace]
members = [
    "crates/hoststamp",
    "crates/hoststamp-api",
    "crates/hoststamp-core",
    "crates/hoststamp-ux",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Michael Stutz <michaeljstutz@users.noreply.github.com>"]
license = "FSL-1.1-ALv2"
repository = "https://github.com/hoststamp/hoststamp"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.3"
hmac = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sha2 = "0.11"
sqids = "=0.4.2"
rusqlite = { version = "0.40", features = ["bundled"] }
subtle = "2"
toml = "1.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v7"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
