# SPDX-License-Identifier: FSL-1.1-ALv2

[package]
name = "hoststamp-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Hoststamp API server."

[dependencies]
anyhow.workspace = true
axum.workspace = true
hoststamp-core = { path = "../hoststamp-core" }
hoststamp-ux = { path = "../hoststamp-ux" }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
rusqlite.workspace = true
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
