# SPDX-License-Identifier: FSL-1.1-ALv2

[package]
name = "hoststamp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Hoststamp reusable generation, profile, storage, and attribution core."

[dependencies]
anyhow.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqids.workspace = true
rusqlite.workspace = true
subtle.workspace = true
toml.workspace = true
uuid.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
