# SPDX-License-Identifier: FSL-1.1-ALv2

[package]
name = "hoststamp-ux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Hoststamp local UX shell."

[dependencies]
axum.workspace = true
