# SPDX-License-Identifier: FSL-1.1-ALv2

[package]
name = "hoststamp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Hoststamp CLI, API server, and local UX."


[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
rusqlite.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
http-body-util = "0.1"
predicates = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
